--- a/ASEAN Rail.css
+++ b/ASEAN Rail.css
@@ -187,6 +187,21 @@ nav {
 
 }
 
+@media only screen and (max-width: 710px) {
+   .mainmenu {
+        display: block;
+   }
+
+   .menubox {
+        width: 80%;
+        margin: 3% 10%;
+   }
+
+   .menuboxtitle h3 , #timeprice {
+        font-size: 22px;
+   }
+}
+
 /* destinations */
 
 .destinationsmenu {
@@ -221,66 +236,54 @@ nav {
     padding: 3px;
 }
 
+@media only screen and (max-width: 800px) {
+    .destinationsmenu {
+        display: grid;
+        grid-template-columns: 50% 50%;
+        grid-template-rows: 50% 50%;
+        justify-items: center;
+    }
+
+}
+
 /* Routes */
 
 .routemap {
-    display: flex;
-    justify-content: center;
+    width: 100vw;
 }
 
 .textbox , .text{
     display: none;
 }
 
-#routemappic {
-    max-height: 96vh;
+.routemappic {
+    max-height: 92vh;
+    height: 600px;
+    min-height: 450px;
+    width: 100%;
+}
+/*
+@media only screen and (max-width: 1300px) {
+    .routemappic {
+         margin-left: -10%;
+         width: 110%;
+    }
 }
 
-.routemaptext {
-    display: grid;
-    gap: 10px;
+@media only screen and (max-width: 1150px) {
+    .routemappic {
+         margin-left: -20%;
+         width: 120%;
+    }
 }
 
-.linename {
-    font-weight: 600;
+@media only screen and (max-width: 850px) {
+    .routemappic {
+         margin-left: -35%;
+         width: 135%;
+    }
 }
-
-.eastline {
-    grid-row: 1;
-    grid-column: 1;
-    border: black solid 1px;
-}
-
-.westline {
-    grid-row: 1;
-    grid-column: 3;
-    border: black solid 1px;
-}
-
-.centralline {
-    grid-row: 1;
-    grid-column: 2;
-    border: black solid 1px;
-}
-
-.northline {
-    grid-row: 1;
-    grid-column: 4;
-    border: black solid 1px;
-}
-
-.northjavaline {
-    grid-row: 2;
-    grid-column: 1;
-    border: black solid 1px;
-}
-
-.southjavaline {
-    grid-row: 2;
-    grid-column: 2;
-    border: black solid 1px;
-}
-
+*/
 /* Logistics */
 
 .searchform {
